--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,9 +13,9 @@
             android:icon="@drawable/ic_menu_profile"
             android:title="@string/menu_profile" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_create"
+            android:icon="@drawable/ic_menu_create"
+            android:title="@string/menu_create" />
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
