--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="131dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="192dp"
-        android:onClick="readData"
+        android:onClick="saveText"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
