got most colors from figma into the values/colors.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#184FA2</color>
-    <color name="colorPrimaryDark">#1C2974</color>
+    <color name="colorPrimary">@color/colorGreen</color>
+    <color name="colorPrimaryDark">@color/colorGreenDark</color>
     <color name="colorAccent">#00B8C4</color>
     <color name="colorAccentLight">#018C9B</color>
+
+    <!-- these are the hex codes from the color pallets on figma -->
+    <color name="colorGreenLight">#093E42</color>
+    <color name= "colorGreen">#004E53</color>
+    <color name= "colorGreenDark">#093E42</color>
+    <color name="colorGrey">#E2E3E3</color>
+    <color name="colorTealLight">#00B8C4</color>
+    <color name="colorTeal">#018C9B</color>
+    <color name="colorBlueLight">#D3E3F1</color>
+    <color name="colorBlue">#184FA2</color>
+    <color name="colorBlueDark">#1C2974</color>
 
     <!-- these colors are for the nav drawer -->
     <color name="centerColor">@color/colorPrimary</color>
