--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,17 +9,18 @@
 
     <EditText
         android:id="@+id/tagSearchBar"
-        android:layout_width="300dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="60dp"
-        android:hint="Ex. Bangkok, Thailand scenic"
+        android:hint="@string/search_hint_home"
         android:queryHint="Ex. family-friendly"
-        app:layout_constraintBottom_toBottomOf="@id/layout"
+        app:layout_constraintBottom_toTopOf="@+id/home_cats"
         app:layout_constraintEnd_toEndOf="@id/layout"
-        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintHorizontal_bias="0.366"
         app:layout_constraintStart_toStartOf="@id/layout"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.060000002" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/locationSearchBar"
@@ -35,16 +36,55 @@
 
     <Button
         android:id="@+id/searchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="48dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:text="Search"
+        android:text="[drw]"
+        app:layout_constraintBottom_toTopOf="@+id/home_cats"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.67"
+        app:layout_constraintHorizontal_bias="0.826"
         app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
         app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintVertical_bias="0.551" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_itins"
+        android:layout_width="360dp"
+        android:layout_height="419dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.944" />
+
+    <TextView
+        android:id="@+id/home_intro"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/home_intro"
+        android:textColor="@color/colorGreenLight"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/home_itins"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.416"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_cats"
+        android:layout_width="361dp"
+        android:layout_height="99dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/home_intro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
