--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_nav_home_to_nav_saved"
             app:destination="@id/nav_saved" />
+        <action
+            android:id="@+id/action_nav_home_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
 
     <fragment
@@ -56,4 +59,9 @@
         android:name="cs160.final_proj_drawer.ui.posted.PostedFragment"
         android:label="@string/menu_posted"
         tools:layout="@layout/fragment_posted" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="cs160.final_proj_drawer.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
