--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,14 +30,14 @@
         android:layout_centerVertical="true"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/textViewEmpty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageViewEmpty"
-        android:layout_centerHorizontal="true"
-        android:text="NO_INFORMATION"
-        android:visibility="gone" />
+<!--    <TextView-->
+<!--        android:id="@+id/textViewEmpty"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/imageViewEmpty"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:text="NO_INFORMATION"-->
+<!--        android:visibility="gone" />-->
 
 </RelativeLayout>
 <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
