--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dip"
@@ -12,6 +13,14 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:padding="5dip">
+
+        <ImageView
+            android:id="@+id/cover_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="50"
+            android:scaleY="50"
+            app:srcCompat="@android:drawable/star_big_on" />
 
         <TextView
             android:id="@+id/text"
