--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_profile"
@@ -18,17 +18,17 @@
             android:title="@string/menu_create" />
         <!--
         <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
-        <item
             android:id="@+id/nav_saved"
-            android:icon="@drawable/ic_menu_saved"
+            android:icon="@drawable/bkmark_filled"
             android:title="@string/menu_saved" />
         <item
             android:id="@+id/nav_posted"
             android:icon="@drawable/ic_menu_posted"
             android:title="@string/menu_posted" />
+        <item
+            android:id="@+id/nav_tools"
+            android:icon="@drawable/ic_menu_settings"
+            android:title="@string/menu_tools" />
             -->
     </group>
     <!--
