--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
         android:layout_marginEnd="20dp"
         android:text="@string/home_intro"
         android:textColor="@color/colorGreenLight"
-        android:textSize="24sp"
+        android:textSize="@dimen/fun_text"
         app:layout_constraintBottom_toTopOf="@+id/home_itins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.416"
