--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,10 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <!-- Itin cards -->
+    <!-- cards -->
     <dimen name="card_icons">20dp</dimen>
+    <dimen name="card_text">18sp</dimen>
+
+    <!-- fun text sizes -->
+    <dimen name="fun_text">24sp</dimen>
 </resources>
