--- a/app/src/main/res/layout/cat_card.xml
+++ b/app/src/main/res/layout/cat_card.xml
@@ -12,8 +12,26 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="5dip">
+<!--        <ImageView-->
+<!--            android:id="@+id/cover_img"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginStart="0dp"-->
+<!--            android:layout_marginTop="0dp"-->
+<!--            android:layout_marginEnd="0dp"-->
+<!--            android:layout_marginBottom="0dp"-->
+<!--            android:scaleX="1"-->
+<!--            android:scaleY="1"-->
+<!--            app:srcCompat="@android:drawable/star_big_on" />-->
+
+        <!-- hard-coded category images in horizontal scroll -->
+        <!-- pics are dynamically set in CatAdapter.java -->
         <ImageView
-            android:id="@+id/cover_img"
+            android:id="@+id/bg_img"
             android:layout_width="20dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
@@ -25,8 +43,10 @@
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
             android:scaleX="1"
-            android:scaleY="1"
-            app:srcCompat="@android:drawable/star_big_on" />
+            android:scaleY="1" />
+
+        <!-- text is dynamically set in CatAdapter.java -->
+
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
@@ -35,6 +55,8 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="0dp"
             android:text="text"
+            android:textColor="@color/colorOffWhite"
+            android:fontFamily="@font/manjaribold"
             android:textSize="@dimen/card_text"/>
 
     </RelativeLayout>
