--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,9 +15,13 @@
     <color name="colorBlueLight">#D3E3F1</color>
     <color name="colorBlue">#184FA2</color>
     <color name="colorBlueDark">#1C2974</color>
+    <color name="colorOffWhite">#F6F6F6</color>
 
     <!-- these colors are for the nav drawer -->
     <color name="centerColor">@color/colorPrimary</color>
     <color name="endColor">@color/colorPrimaryDark</color>
     <color name="startColor">@color/colorPrimary</color>
+
+
+
 </resources>
