tweaking home page design

--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -5,7 +5,8 @@
     android:layout_height="150dp"
     android:layout_marginLeft="5dip"
     android:layout_marginRight="5dip"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground"
+    app:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -43,7 +44,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
             android:scaleX="2"
-            android:scaleY="1"
+            android:scaleY="2"
             android:src="@drawable/sceniclookouts" />
 
 
@@ -95,7 +96,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            app:srcCompat="@drawable/bookmark_white" />
+            app:srcCompat="@drawable/bookmark" />
 
 
     </RelativeLayout>
