--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -96,7 +96,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            app:srcCompat="@drawable/bookmark" />
+            app:srcCompat="@drawable/ic_bkmark" />
 
 
     </RelativeLayout>
