trying a new constraint thing.

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,39 +8,44 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!--
-                <Button
-                    android:id="@+id/searchButton2"
-                    android:layout_width="70dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="20dp"
-                    android:text="[drw]"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.733"
-                    app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
-                <EditText
-                    android:id="@+id/tagSearchBar"
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:hint="@string/search_hint_home"
-                    android:queryHint="Ex. family-friendly"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteX="38dp" />
+        <Button
+            android:id="@+id/searchButton2"
+            android:layout_width="70dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"
+            android:text="[drw]"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.733"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <EditText
-                    android:id="@+id/locationSearchBar"
-                    android:layout_width="180dp"
-                    android:layout_height="90dp"
-                    android:hint="Current Location"
-                    android:queryHint="Current Location"
-                    android:visibility="gone"
-                    app:layout_constraintLeft_toLeftOf="@+id/tagSearchBar" />
-        -->
+        <EditText
+            android:id="@+id/tagSearchBar2"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="@string/search_hint_home"
+            android:queryHint="Ex. family-friendly"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="38dp" />
+
+        <EditText
+            android:id="@+id/locationSearchBar2"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="Current Location"
+            android:queryHint="Current Location"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/tagSearchBar2"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
@@ -49,10 +54,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search" />
+            app:layout_constraintTop_toBottomOf="@+id/temp" />
 
         <Button
-            android:id="@+id/search"
+            android:id="@+id/temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="this onclick opens a single itin"
