made the search bars in the search frag

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -37,14 +37,12 @@
             android:id="@+id/locationSearchBar2"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="60dp"
             android:hint="Current Location"
             android:queryHint="Current Location"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/tagSearchBar2"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:visibility="visible"
+            app:layout_constraintTop_toTopOf="@+id/tagSearchBar2"
+            tools:layout_editor_absoluteX="38dp"/>
 
         <TextView
             android:id="@+id/textView7"
