--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,30 +7,31 @@
     android:layout_height="match_parent">
 
 
-    <Button
+    <ImageButton
         android:id="@+id/searchButton"
         android:layout_width="70dp"
-        android:layout_height="48dp"
+        android:layout_height="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:text="[drw]"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/search_button"
+        android:src="@drawable/magnifyingglass"
+        />
 
     <EditText
         android:id="@+id/tagSearchBar"
-        android:layout_width="280dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="60dp"
         android:hint="@string/search_hint_home"
         android:queryHint="Ex. family-friendly"
-        app:layout_constraintEnd_toEndOf="@id/layout"
-        app:layout_constraintHorizontal_bias="0.366"
-        app:layout_constraintStart_toStartOf="@id/layout"
+        app:layout_constraintStart_toStartOf="@id/home_intro"
+        app:layout_constraintRight_toLeftOf="@id/searchButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -73,7 +74,7 @@
         android:id="@+id/home_intro"
         android:layout_width="350dp"
         android:layout_height="48dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/manjaribold"
@@ -82,7 +83,7 @@
         android:textSize="@dimen/fun_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/home_itins"
         app:layout_constraintTop_toBottomOf="@+id/home_cats" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
