--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -6,6 +6,8 @@
     android:layout_marginLeft="5dip"
     android:layout_marginRight="5dip"
     android:foreground="?attr/selectableItemBackground"
+    app:cardElevation="0dp"
+    app:cardBackgroundColor="@color/colorOffWhite"
     app:cardCornerRadius="@dimen/roundCorners">
 
     <RelativeLayout
