--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,6 @@
     <dimen name="fun_text">24sp</dimen>
 
     <dimen name="roundCorners">9dp</dimen>
+    <dimen name="catPaddingRight">9dp</dimen>
 
 </resources>
